--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^0.20.0",
     "coffee-script": "^1.10.0",
-    "nodemon": "^1.9.1"
+    "nodemon": "^1.9.1",
+    "request": "^2.69.0"
   }
 }
