--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cheerio": "^0.20.0",
     "coffee-script": "^1.10.0",
+    "express": "^4.13.4",
     "nodemon": "^1.9.1",
     "request": "^2.69.0"
   }
