package.json modified for for dev and prod

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preinstall": "coffee --output lib -c src",
     "build": "coffee --output lib -cw src",
     "start": "node ./lib/server/server.js",
+    "compile": "node ./lib/server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords" :[
